--- a/client/src/assets/styles/Footer.css
+++ b/client/src/assets/styles/Footer.css
@@ -14,6 +14,7 @@
     margin: 0 auto;
     padding: 20px 40px;
     box-sizing: border-box;
+
 }
 
 /* Social media icons */
@@ -144,11 +145,12 @@
 /* Tablet: 391px–1020px */
 @media (min-width: 391px) and (max-width: 1020px) {
     .footer-inner-container {
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         text-align: center;
         padding: 20px 30px;
+
     }
 
     .footer-socials {
